<resources>
    <string name="app_name">Mängelmelder</string>
    <string name="notif_channel_id">maengelmelder_v2</string>
    <string name="title_welcome">Willkommen zu Mängelmelder</string>
    <string name="title_terms">Nutzungsbedingungen</string>
    <string name="title_policy">Datenschutzhinweise</string>
    <string name="warn_not_accepting_terms_and_policy">Um die App nutzen zu können, müssen Sie die Nutzungsbedingungen und Datenschutzhinweise akzeptieren.</string>
    <string name="step_choose_location">Position</string>
    <string name="step_choose_photo">Fotos</string>
    <string name="step_choose_category">Kategorie</string>
    <string name="step_edit_prelim">Beobachtung</string>
    <string name="step_edit_attributes">Beschreibung</string>
    <string name="step_review">Übersicht</string>
    <string name="step_check_duplicates">Duplikate</string>
    <string name="register">Konto erstellen</string>
    <string name="login">Einloggen</string>
    <string name="login2">Anmelden</string>
    <string name="logout">Ausloggen</string>
    <string name="hint_username">E-Mail</string>
    <string name="hint_password">Passwort</string>
    <string name="loading_domains">Standortinformation wird geladen…</string>
    <string name="error_parse_login_resp">Fehler beim Server. Bitte versuchen Sie es später nochmal</string>
    <string name="error_empty_user_pass">E-Mail oder Passwort müssen nicht leer sein</string>
    <string name="info_autologin_success">Sie sind als %1$s automatisch eingeloggt</string>
    <string name="info_login_success">Sie sind als %1$s erfolgreich eingeloggt</string>
    <string name="info_logout_success">Sie sind erfolgreich ausgeloggt</string>
    <string name="error_wrong_user_pass">Falsches Email / Passwort</string>
    <string name="status_autologin_user">Als \'%1$s\' einloggen..</string>
    <string name="login_to">Sie wöllen zu %1$s eingeloggt werden</string>
    <string name="override_username"></string>
    <string name="override_domain_login">Anmeldung an %1$s</string>
    <string name="login_failed_to_retrieve_domain">Kein gültiges Position gefunden. Bitte prüfen Sie Ihre Internetverbindung oder GPS.</string>
    <string name="mm_no_location_fallback_message"></string>
    <string name="warn_previous_account_auto_logout">Sie sind aktuell an %1$s angemeldet. Mit der neuen Anmeldung auf %2$s werden Sie automatisch vom bisherigen System abgemeldet.</string>
    <string name="download_cache_tile">Karte laden</string>
    <string name="toggle_map_list">Karteliste</string>
    <string name="hint_map_name">Kartename</string>
    <string name="help">Hilfe</string>
    <string name="map_confirm_text">Die Teil der Karte, die Sie eingesetzt haben, wird zu Ihrem Gerät geladen. Bitte geben Sie die Name der Kartedatei</string>
    <string name="overwrite_alert_title">Kartedatei vorliegt</string>
    <string name="overwrite_alert_msg">Es gibt die Kartedaten mit der gleichen Name\n\n(%1$s).\n\nMöchten Sie die alte Karte überschreiben?</string>
    <string name="overwrite_yes">Ja</string>
    <string name="overwrite_no">Nein</string>
    <string name="notif_info_download_map_01">Karte wird vorbereitet&#8230;</string>
    <string name="err_mapname_empty">Bitte geben Sie die Name der Kartedatei</string>
    <string name="toggle_mapoffline">Offline-Karte nutzen\n(%1$d Kartedatei)</string>
    <string name="info_no_mapfiles">Keine Kartedatei</string>
    <string name="warn_mapdownload_may_fail">Bitte beachten Sie, das der Download-Prozess wegen der Größe der Karte oder der verfügbarkeit des Servers erfolglos sein kann</string>
    <string name="activity_mymessages">Meine Meldungen</string>
    <string name="activity_messagedetail">Meldung</string>
    <string name="activity_update_message">Meldung aktualisieren</string>
    <string name="activity_new_message">Neue Meldung</string>
    <string name="activity_new_message_idea">Neue Idee</string>
    <string name="save">Speichern</string>
    <string name="dialog_loading">Geladen…</string>
    <string name="dialog_loading_checkcategory">Position validieren…</string>
    <string name="pick_defectreport">Mängel melden</string>
    <string name="pick_idea">Idee anlegen</string>
    <string name="deeplink_loading_message">Neue Meldung wird vorbereitet…</string>
    <string name="deeplink_err_type_not_found">Die gegebene Kategorie ist auf diesem Standort nicht gültig.</string>
    <string name="message_create_option_qr_code_desc">Scannen Sie eine QR-Code, um neue Meldung mit vorausgefüllte Information zu erstellen.</string>
    <string name="message_create_option_qr_code_title">QR-Code</string>
    <string name="message_create_option_standard_desc">Setzen Sie den Standort, Wählen Sie eine Kategorie, und füllen Sie zusätzliche Information aus.</string>
    <string name="message_create_option_standard_title">Standard</string>
    <string name="back_twice_to_exit">Drücken Sie erneut, um die App zu verlassen</string>
    <string name="err_no_conn">Es gibt keine Internetverbindung. Bitte versuchen Sie es später erneut</string>
    <string name="err_general">Fehlercode %1$s. Bitte versuchen Sie nochmal später</string>
    <string name="err_not_found">404 Nicht gefunden. Bitte versuchen Sie es später erneut</string>
    <string name="err_auth">Authentifizierung fehlgsechlagen. Bitte versuchen Sie es später erneut</string>
    <string name="err_server_error">Es gibt keine Antworten vom Server. Bitte versuchen Sie es später erneut</string>
    <string name="err_server_500">Es ist leider ein technisches Problem aufgetreten. Bitte versuchen Sie es später erneut.</string>
    <string name="err_server_503">Server ist momentan nicht verfügbar. Bitte versuchen Sie es später erneut</string>
    <string name="err_server_no_respond">Es gibt keine Antworten vom Server. Bitte versuchen Sie es später erneut</string>
    <string name="err_server_cert">Es gibt Zertifikatsproblem vom Server. Bitte versuchen Sie es später erneut</string>
    <string name="status_loading_messages">Meldungen werden geladen..</string>
    <string name="btn_new_message">Neue Meldung</string>
    <string name="btn_new_message_from_qr">QR-Code scannen</string>
    <string name="selected_message_group_line1">%1$s Meldungen</string>
    <string name="selected_message_group_line2">Tippen Sie, um eine Liste zu öffnen</string>
    <string name="loading_retrieving_location">Standort wird abgerufen…</string>
    <string name="warn_position_not_found_title">Ihr aktueller Standort konnte nicht ermittelt werden.</string>
    <string name="warn_position_not_found_desc">Sie können die Position auf der Karte manuell auswählen oder Ihren aktuellen Standorts erneut abfragen.</string>
    <string name="warn_position_not_found_btn_no">Standort erneut ermitteln</string>
    <string name="warn_position_not_found_btn_yes">Position auf Karte wählen</string>
    <string name="warn_firsttime_not_emergency_app">Benutzen Sie dieses System niemals, um Notfälle zu melden. Verwenden Sie hierzu die Telefonnummern von Polizei, Feuerwehr und Rettungsdienst.</string>
    <string name="activity_profile">Ihr Profil</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="menu_save">Zwischenspeichern</string>
    <string name="menu_cancel">Abbrechen</string>
    <string name="info_message_saved">Ihre Meldung wird erfolgreich gespeichert.</string>
    <string name="info_message_cancelled">Ihre Meldung wird erfolgreich gelöscht.</string>
    <string name="err_msgcreation_invalid_json">Es fehlen noch Angaben oder der Beschreibungstext ist zu kurz. Die Meldung kann nicht gesendet werden. Bitte prüfen Sie Ihre Angabe.</string>
    <string name="err_msgcreation_invalid_type">Sie haben keine Kategorie eingegeben. Die Meldung kann nicht gesendet werden. Bitte prüfen Sie Ihre Angabe.</string>
    <string name="err_msgcreation_invalid_pos">Sie haben keine gültige Position eingegeben. Die Meldung kann nicht gesendet werden. Bitte prüfen Sie Ihre Angabe</string>
    <string name="err_msgcreation_invalid_attr">Es fehlen noch Angaben. Die Meldung kann nicht gesendet werden. Bitte prüfen Sie Ihre Angabe</string>
    <string name="err_msgcreation_need_auth">Die Meldung kann nicht gesendet werden. Für diese Meldung müssen Sie erst angemeldet.</string>
    <string name="msg_creation_connection_not_available">Sie haben keine Internetverbindung und können die App daher nur eingeschränkt nutzen.</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galerie</string>
    <string name="select_photo">Bild wählen</string>
    <string name="warn_no_photo_chosen_title">Achtung: Kein Photo</string>
    <string name="status_no_photo_added">Kein Foto hinzugefügt. Klicken Sie hier, um ein neues Foto über die Kamera oder aus der Galerie hinzuzufügen.</string>
    <string name="title_testinfo_appversion">App Version</string>
    <string name="title_testinfo_packagename">Packagename</string>
    <string name="title_testinfo_device">Gerät</string>
    <string name="title_testinfo_endpoint">Server</string>
    <string name="title_testinfo_connection">Netz</string>
    <string name="title_testinfo_loggedinuser">Eingeloggte</string>
    <string name="title_testinfo_token">Auth.token</string>
    <string name="email">E-mail</string>
    <string name="email_sub">Abonnieren</string>
    <string name="subscribe_check">Benachrichtigung per Email erhalten</string>
    <string name="email_sub_explain">Ihre Meldung wird zunächst von einem Sachbearbeiter geprüft. Entspricht sie den Nutzungsbedingungen, wird sie freigeschaltet und weitergeleitet. Wenn Sie uns Ihre Email-Adresse hinterlassen, werden wir Sie benachrichtigen, sobald die Meldung bearbeitet wurde.</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_loc_perm">Berechtigung</string>
    <string name="dialog_permission_headline">Bitte erlauben Sie uns die folgenden Zugriffe, um alle Funktionen der App nutzen zu können:</string>
    <string name="permission_location">Erkennung Ihres aktuellen Standorts. So kann die Position einer neuen Meldung automatisch ermittelt werden und es können Ihnen weitere Meldungen in Ihrem direkten Umfeld angezeigt werden.</string>
    <string name="permission_camera">Zugriff auf Kamera. Dies ermöglicht Ihnen, Bilder direkt mit der Kamera aufzunehmen und zu verwenden. Diese Berechtigung kann auch später erteilt werden.</string>
    <string name="permission_notification">Zugriff auf Benachrichtigung. Dies ermöglicht Benachrichtigungen zum Fortschritt des Meldungs-Uploads. Diese Berechtigung kann auch später erteilt werden.</string>
    <string name="permission_storage">Zugriff auf Dateien von Ihrem lokalen Speicher. Somit können Sie Ihrer Meldung Bilder hinzufügen.</string>
    <string name="dialog_permission_ask">Verstanden</string>
    <string name="dialog_permission_dontshow">Fenster nicht mehr zeigen</string>
    <string name="err_location_not_found">Ihre Position konnte noch nicht bestimmt werden. Bitte warten Sie, bis ihr Telefon ihre Position bestimmt hat oder aktivieren Sie GPS.</string>
    <string name="dialog_gps_activate">GPS aktivieren</string>
    <string name="dialog_rate_app_desc">Möchten Sie die App bewerten? Ihre Bewertung hilft uns, die App zu verbessern.</string>
    <string name="dialog_to_rate_app">Ja, App bewerten</string>
    <string name="acc_cd_fotostep_selected">Ausgewähltes Foto</string>
    <string name="acc_cd_fotostep_deleteselected">Ausgewähltes Foto löschen</string>
    <string name="acc_cd_fotostep_newimage">Neues Foto auswählen</string>
    <string name="acc_cd_message_creation_option_qr">Neue Meldung von Scannen einer QR-Code</string>
    <string name="acc_cd_message_creation_option_standard">Neue Meldung erstellen</string>
</resources>