<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:text="@string/map_confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_margin="7dp"
        android:id="@+id/mapname"
        android:hint="@string/hint_map_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_download_map"
        android:layout_width="match_parent"
        android:text="@string/download_cache_tile"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:text="@string/dialog_cancel"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/warn_mapdownload_may_fail"
        android:drawableLeft="@drawable/ic_drwtext_warn"
        android:drawablePadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>