<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/text"
        android:text="@string/dialog_rate_app_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/dialog_cancel"
            android:theme="@style/MMTheme.GeneralButton2"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_go_to_app_store"
            android:text="@string/dialog_to_rate_app"
            android:theme="@style/MMTheme.GeneralButton"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <CheckBox
        android:layout_below="@id/buttons"
        android:id="@+id/chk_dont_show"
        android:minHeight="48dp"
        android:text="@string/dialog_permission_dontshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>