<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">
        <TextView
            android:text="@string/dialog_permission_headline"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@color/mmcolor_border" />

        <LinearLayout
            android:id="@+id/perm_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@android:drawable/ic_menu_gallery"
                app:tint="@color/mmcolor_icon_tint_on_white"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/permission_storage"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/perm_location"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_action_location_found"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                app:tint="@color/mmcolor_icon_tint_on_white" />

            <TextView
                android:text="@string/permission_location"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/perm_camera"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@android:drawable/ic_menu_camera"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                app:tint="@color/mmcolor_icon_tint_on_white" />

            <TextView
                android:text="@string/permission_camera"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/perm_notif"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:src="@android:drawable/ic_dialog_alert"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                app:tint="@color/mmcolor_icon_tint_on_white" />

            <TextView
                android:text="@string/permission_notification"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/chk_dont_show"
                android:minHeight="48dp"
                android:text="@string/dialog_permission_dontshow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_ask_permission"
                android:theme="@style/MMTheme.GeneralButton"
                android:text="@string/dialog_permission_ask"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_cancel"
                android:theme="@style/MMTheme.GeneralButton"
                android:text="@string/dialog_cancel"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>